<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/herof"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15sp"
            android:layout_marginTop="15sp"
            android:layout_marginRight="15sp"
            android:gravity="left|center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    style="@style/labsubtitulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:text="@string/sucursal" />

                <EditText
                    android:id="@+id/txtSurcursal_inv"
                    style="@style/txtedit"
                    android:layout_height="50sp"
                    android:layout_marginTop="5sp"
                    android:inputType="textPersonName"
                    android:text="@string/seleccionar" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:layout_weight="1"
                    android:gravity="left|center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView4"
                        style="@style/labsubtitulo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10sp"
                        android:text="@string/productodet" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:layout_marginTop="10sp"
                    android:layout_weight="1"
                    android:gravity="left|center_vertical"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/txtcodigoplu"
                        style="@style/txtedit"
                        android:layout_width="223dp"
                        android:layout_height="50dp"
                        android:inputType="textPersonName"
                        android:text="@string/codigoplu" />

                    <ImageView
                        android:id="@+id/btnscaner"
                        android:layout_width="150sp"
                        android:layout_height="50sp"
                        android:layout_marginLeft="10sp"
                        android:layout_marginTop="10sp"
                        android:layout_marginRight="10sp"
                        android:layout_marginBottom="10sp"
                        android:background="#2196F3"
                        android:onClick="onClick"
                        app:srcCompat="@drawable/camara" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:gravity="left|center_vertical"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/txtSurcursal_inv3"
                    style="@style/txtedit"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:inputType="textPersonName"
                    android:text="@string/descripcion" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="20sp"
                android:gravity="left|center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/textView1"
                    style="@style/labsubtitulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cantidad" />

                <EditText
                    android:id="@+id/editTextNumber2"
                    style="@style/txtedit"
                    android:layout_width="match_parent"
                    android:layout_height="50sp"

                    android:layout_marginLeft="10sp"
                    android:ems="10"
                    android:inputType="number"
                    android:text="1"
                    android:textAlignment="center"
                    android:textSize="24sp" />



            </LinearLayout>
        </LinearLayout>




    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>